--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <div class="icon"></div>
       <div class="data">
         <p>The temperature is about <span id="temperature">error</span><span>&deg;C</span>,</p>
-        <p>and the wheater probably is <span id="wheaterDisplay">error</span></p>
+        <p>and the wheater <span class="underline">probably</span> is <span id="wheaterDisplay">error</span></p>
       </div>
     </div>
     <p class="copy_right">&copy; Koen Westendorp 2016</p>
